<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_odom</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="weibingchuan20@gmail.com">wbc</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>Eigen3</depend>
  <depend>PCL</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>realtime_tools</depend>
  <depend>tf2_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
